EXTRA_DIST = \
test10.param test10.result	\
test11.param test11.result	\
test12.param test12.result	\
test13.param test13.result	\
test14.param test14.result	\
test15.param test15.result	\
test16.param test16.result	\
test17.param test17.result	\
test18.param test18.result	\
test19.param			\
test1.param test1.result	\
test2.param test2.result	\
test3.param			\
test4.param test4.result	\
test5.param test5.result	\
test6.param			\
test7.param			\
test8.param			\
test9.param test9.result
