EXTRA_DIST = \
test001.param test001.result	\
test002.param test002.result	\
test003.param			\
test004.param test004.result	\
test005.param test005.result	\
test006.param			\
test007.param			\
test008.param			\
test009.param test009.result	\
test010.param test010.result	\
test011.param test011.result	\
test012.param test012.result	\
test013.param test013.result	\
test014.param test014.result	\
test015.param test015.result	\
test016.param test016.result	\
test017.param test017.result	\
test018.param test018.result	\
test019.param			\
test020.param			\
test021.param			\
test022.param test022.result	
